# zokrada

./: .gitignore  README.md  contract.py  make.sh  pyproject.toml  test.py
groth16/: classes.py  input_length.py  pairing.py  parameters.py  verification_key.py  verifier.py
groth16/bn128/: bn128_curve.py  bn128_field_elements.py  bn128_pairing.py
zokrada/: input_length.py  pairing.py  verification_key.py  verifier.py
