[tool.poetry]
name = "zkada"
version = "0.1.0"
description = ""
authors = ["Niels Mündler <n.muendler@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opshin = { git = "https://github.com/opshin/opshin.git", branch = "feat/bn256-pairings" }
pluthon = { git = "https://github.com/opshin/pluthon.git", branch = "feat/bn128-pairings" }
uplc = { git = "https://github.com/opshin/uplc.git", branch = "feat/bn256-pairing" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

